--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset=UTF-8>
+  <meta name="viewport" content="width=device-width, height=device-height, target-densitydpi=device-dpi, initial-scale=1">
+  <title>Engineering diagnostics</title>
+  <script src="script.js"></script>
+  <link rel='stylesheet' href='style.css' type='text/css'>
+</head>
+
+<body>
+  <div id='hero'>
+    <div id='hero-nav'>
+      <div id='hero-nav-burger'>
+        <div id='Group'>
+          <div id='Rectangle'></div>
+          <div id='Rectangle'></div>
+        </div>
+      </div>
+    </div>
+    <div id ='hero-bg'>
+      <div id='hero-bg-mask'>
+        <div class='Lines'>
+          <div id='hero-bg-lines1'><img src=images/Line.jpg></div>
+          <img src=images/Line.jpg id='hero-bg-lines2'>
+          <img src=images/Line.jpg id='hero-bg-lines3'>
+          <img src=images/Line.jpg id='hero-bg-lines4'>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
