--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id='hero-nav'>
       <div id='hero-nav-burger'>
         <div id='Group'>
-          <div id='Rectangle'></div>
-          <div id='Rectangle'></div>
+          <div id='Rectangle1'></div>
+          <div id='Rectangle2'></div>
         </div>
       </div>
     </div>
