--- a/index.html
+++ b/index.html
@@ -7,25 +7,41 @@
   <title>Engineering diagnostics</title>
   <script src="script.js"></script>
   <link rel='stylesheet' href='style.css' type='text/css'>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id='hero'>
-    <div id='hero-nav'>
-      <div id='hero-nav-burger'>
-        <div id='Group'>
-          <div id='Rectangle1'></div>
-          <div id='Rectangle2'></div>
-        </div>
-      </div>
-    </div>
     <div id ='hero-bg'>
       <div id='hero-bg-mask'>
-        <div class='Lines'>
-          <div id='hero-bg-lines1'><img src=images/Line.jpg></div>
-          <img src=images/Line.jpg id='hero-bg-lines2'>
-          <img src=images/Line.jpg id='hero-bg-lines3'>
-          <img src=images/Line.jpg id='hero-bg-lines4'>
+        <div id='main'>
+          <div id='nav'>
+            <img src='images/Rectangle.jpg' id='rect1'>
+            <img src='images/Rectangle.jpg' id='rect2'>
+            <img src='images/Rectangle_small.jpg' id='rect3'>
+            <img src='images/Rectangle_small.jpg' id='rect4'>
+            <a href='/'><img src='images/logo.svg' id='logo' alt='Logo'></a>
+            <div id='mail'>
+              <p id='write'>Пишите нам на email</p>
+              <img src='images/mail.svg'><span id='e-mail'>info@diagnistics.by</span>
+            </div>
+            <div id='number'>
+              <img src='images/phone.svg'><span>Есть вопросы? Звоните!</span>
+              <p id='phone'>+375 (29) 456-45-45</p>
+            </div>
+          </div>
+        </div>
+        <div id='content'>
+          <div id='header'>
+            <p id='h_first'>Независимое обследование<br> зданий и сооружений</p>
+            <p id='h_second'>антенн, труб, теплосетей, канализаций<br> 
+              и других объектов строительства</p>
+          </div>
+          <div id='but'>
+            <div id='button'><img src='images/download.svg'><span>Получить коммерческое</span></div>
+            <p id='b_first'>Отправьте техзадание и получите коммерческое предложение в течении 15 минут на свой email или в мессенджер</p>
+          </div>
         </div>
       </div>
     </div>
