--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link rel='stylesheet' href='style.css' type='text/css'>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div id='hero'>
+  <div class='hero'>
     <div id ='hero-bg'>
       <div id='hero-bg-mask'>
         <div id='main'>
@@ -43,7 +44,78 @@
             <p id='b_first'>Отправьте техзадание и получите коммерческое предложение в течении 15 минут на свой email или в мессенджер</p>
           </div>
         </div>
+        <div id='bot'>
+          <div id='features'>
+            <div id='f_first'><img src='images/01_stroke.svg'><div id='first'>Начинаем работать<br> без аванса</div></div>
+            <div id='f_second'><img src='images/02_stroke.svg'><div id='second'>Предоставляем<br>отсрочку платежа</div></div>
+            <div id='f_third'><img src='images/03_stroke.svg'><div id='third'>Всегда называем<br> справедливую цену</div></div>
+          </div>
+          <div id='video'>
+            <img src='images/706181.jpg'>
+            <img src='images/polygon.png'>
+          </div>
+        </div>
+        <div id='line1'></div>
+        <div id='line2'></div>
+        <div id='line3'></div>
+        <div id='line4'></div>
       </div>
     </div>
+  </div>
+  
+  <div class='why_we'>
+    <div id='header'>
+      <p id='about1'>Мы работаем быстро<br>и наши отчеты проходят<br>согласование с первого раза</p>
+      <p id='about2'>Над вашим объектом работает целая команда:<br>3 ГИПа (главных инженеров проектов) с опытом работы<br> от 6 лет и 2 штатных сотрудника для камеральных работ</p>
+    </div>
+    <img src='images/tv.jpg' id='tv'>
+    <div id='right_content'>
+      <p>Вы и Ваши архитекторы получаете:</p>
+        <div><img src='images/icon.jpg'><span >Отчет на который на 100% можно положиться </span></div>
+        <div><img src='images/icon.jpg'><span>Отчет на который на 100% можно положиться </span><br></div>
+        <div><img src='images/icon.jpg'><span>Отчет на который на 100% можно положиться </span></div>
+    </div>
+  </div>
+
+  <div class='services'>
+    <div id='services_mask'>
+      <div id='header'>
+        <p id='uslugi'>Услуги</p>
+        <p id='uslugi2'>Выполняем как комплексное обследование, так и отдельные виды работ</p>
+      </div>
+      <div id='list'>
+        <div id='list1'>
+          <img src='images/proekt_doma.jpg'>
+          <p id='dom'>Общее обследование</p>
+          <p id='dom1'>Экспертиза отдельных конструкций, обмерные работы,<br> определение прочности, расчет несущей способности<br> и т.д.</p>
+          <img src='images/more.png'>
+        </div>
+        <div id='list2'>
+          <img src='images/build.jpg'>
+          <p id='dom'>Тепловизионная съемка</p>
+          <p id='dom1'>Исследование системы отопления, вентиляции<br> и кондиционирования, а также оценка<br> энергоэффективности здания</p>
+          <img src='images/more.png'>
+        </div>
+        <div id='list3'>
+          <img src='images/services_engin.jpg'>
+          <p id='dom'>Телеинспекция инженерных сетей</p>
+          <p id='dom1'>Цветная телевизионная съемка внутренней<br> поверхности любых протяженных объектов<br> до 250 метров</p>
+          <img src='images/more.png'>
+        </div>
+        <div id='list4'>
+          <img src='images/04.jpg'>
+          <p id='dom'>Тахеометрическая съемка</p>
+          <p id='dom1'>Построение чертежей при помощи лазера,<br> который с точностью до микрона определяет<br> расположение объектов в пространстве</p>
+          <img src='images/more.png'>
+        </div>
+        <div id='list5'>
+          <img src='images/04.jpg'>
+          <p id='dom'>Диагностика высотных сооружений</p>
+          <p id='dom1'>Оценка состояния антенн и дымовых<br> труб при помощи альпинистов и квадрокоптеров<br> с 30-кратным зумом</p>
+          <img src='images/more.png'>
+        </div>
+      </div>
+    </div>
+    <img src='images/progress bar.png' id='progress'>
   </div>
 </body>
