--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  <script src='https://raw.github.com/brandonaaron/jquery-mousewheel/master/jquery.mousewheel.js'></script>
 </head>
 
 <body>
@@ -30,7 +28,7 @@
             </div>
             <div id='number'>
               <img src='images/phone.svg'><span>Есть вопросы? Звоните!</span>
-              <p id='phone'>+375 (29) 456-45-45</p>
+              <p>+375 (29) 456-45-45</p>
             </div>
           </div>
         </div>
@@ -42,7 +40,7 @@
           </div>
           <div id='but'>
             <div id='button'><img src='images/download.svg'><span>Получить коммерческое</span></div>
-            <p id='b_first'>Отправьте техзадание и получите коммерческое предложение в течении 15 минут на свой email или в мессенджер</p>
+            <p id='b_first'>Отправьте техзадание и получите коммерческое<br> предложение в течении 15 минут на свой email<br> или в мессенджер</p>
           </div>
         </div>
         <div id='bot'>
@@ -73,9 +71,9 @@
     <img src='images/tv.jpg' id='tv'>
     <div id='right_content'>
       <p>Вы и Ваши архитекторы получаете:</p>
-        <div><img src='images/icon.jpg'><span >Отчет на который на 100% можно положиться </span></div>
-        <div><img src='images/icon.jpg'><span>Отчет на который на 100% можно положиться </span><br></div>
-        <div><img src='images/icon.jpg'><span>Отчет на который на 100% можно положиться </span></div>
+        <div><img src='images/icon.jpg' id='icon'><span >Отчет на который на 100% можно положиться </span></div>
+        <div><img src='images/icon.jpg' id='icon'><span>Отчет на который на 100% можно положиться </span><br></div>
+        <div><img src='images/icon.jpg' id='icon'><span>Отчет на который на 100% можно положиться </span></div>
     </div>
   </div>
 
@@ -90,31 +88,31 @@
           <img src='images/proekt_doma.jpg'>
           <p id='dom'>Общее обследование</p>
           <p id='dom1'>Экспертиза отдельных конструкций, обмерные работы,<br> определение прочности, расчет несущей способности<br> и т.д.</p>
-          <img src='images/more.png'>
+          <img src='images/more.png' id='more'>
         </div>
         <div id='list1'>
           <img src='images/build.jpg'>
           <p id='dom'>Тепловизионная съемка</p>
           <p id='dom1'>Исследование системы отопления, вентиляции<br> и кондиционирования, а также оценка<br> энергоэффективности здания</p>
-          <img src='images/more.png'>
+          <img src='images/more.png' id='more'>
         </div>
         <div id='list1'>
           <img src='images/services_engin.jpg'>
           <p id='dom'>Телеинспекция инженерных сетей</p>
           <p id='dom1'>Цветная телевизионная съемка внутренней<br> поверхности любых протяженных объектов<br> до 250 метров</p>
-          <img src='images/more.png'>
+          <img src='images/more.png' id='more'>
         </div>
         <div id='list1'>
-          <img src='images/04.jpg' style='width: 400px; height: 180px;'>
+          <img src='images/163819.jpeg'>
           <p id='dom'>Тахеометрическая съемка</p>
           <p id='dom1'>Построение чертежей при помощи лазера,<br> который с точностью до микрона определяет<br> расположение объектов в пространстве</p>
-          <img src='images/more.png'>
+          <img src='images/more.png' id='more'>
         </div>
         <div id='list1'>
-          <img src='images/04.jpg' style='width: 400px; height: 180px;'>
-          <p id='dom'>Диагностика высотных</p>
+          <img src='images/hight.jpg'>
+          <p id='dom'>Диагностика высотных сооружений</p>
           <p id='dom1'>Оценка состояния антенн и дымовых<br> труб при помощи альпинистов и квадрокоптеров<br> с 30-кратным зумом</p>
-          <img src='images/more.png'>
+          <img src='images/more.png' id='more'>
         </div>
       </div>
       <div id='line5'></div>
@@ -127,7 +125,7 @@
   
   <div class='steps'>
     <div id='header'>
-      <img src='images/we_work.png'>
+      <img src='images/we_work.png' id='work'>
       <p id='s_first'>чтобы Вы не тратили время на поиск и организацию<br> множества подрядчиков</p>
     </div>
     <div id='step_1'>
