--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       <div id='hero-bg-mask'>
         <div id='main'>
           <div id='nav'>
-            <img src='images/Rectangle.jpg' id='rect1'>
-            <img src='images/Rectangle.jpg' id='rect2'>
-            <img src='images/Rectangle_small.jpg' id='rect3'>
-            <img src='images/Rectangle_small.jpg' id='rect4'>
+            <img src='images/burger.svg' id='rect'>
             <a href='/'><img src='images/logo.svg' id='logo' alt='Logo'></a>
             <div id='mail'>
               <p id='write'>Пишите нам на email</p>
