--- a/index.html
+++ b/index.html
@@ -140,6 +140,71 @@
           <p id='q_second'>АЛЕКСЕЙ, обследователь и главный инженер проектов</p>
         </div>
       </div>
+    </div>
+    <div id='step_2'>
+      <div id='header2'>
+        <div id='group'>
+          <div id='step2'>шаг №2. </div><p id='s2_second'>Детальное инструментальное обследование</p>
+        </div>
+        <p id='s2_trird'>Мы понимаем насколько важны сроки и сколько может стоить день задержки. Поэтому Вы никогда <br>не услышите от нас слов “надо подождать пару дней, пока освободится арендное оборудование” <br> - мы укомплектованы всем необходимым</p>
+      </div>
+      <div id='slider'>
+        <div id='items'>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item.svg'>
+            <div id='text'>Локатор арматуры “Profoscope”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item2.svg'>
+            <div id='text'>Измеритель прочности бетона “ОНИКС-1”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item3.svg'>
+            <div id='text'>Прибор ультразвукового действия “ПУЛЬСАР-2”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item4.svg'>
+            <div id='text'>Измеритель прочности бетона “Молоток Шмидта”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item.svg'>
+            <div id='text'>Локатор арматуры “Profoscope”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item2.svg'>
+            <div id='text'>Измеритель прочности бетона “ОНИКС-1”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item3.svg'>
+            <div id='text'>Прибор ультразвукового действия “ПУЛЬСАР-2”</div>
+          </div>
+          <div id=it>
+            <div id='form'></div>
+            <img src='images/item.svg'>
+            <div id='text'>Локатор арматуры “Profoscope”</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id='step_3'>
+      <div id='part3'>
+        <div id='center'>
+          <div id='step3'>шаг №3. </div><p id='s3_second'>Обработка полученных данных</p>
+          <p id='s3_trird'>Детальный отчет с результатами обследования <br>Вы получите через 7 дней. И на его основании сможете<br> определить судьбу объекта и прогнозировать затраты</p>
+          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Мы оценим техническое состояние объекта и присвоим ему<br> категорию </span></div>
+          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Объясним причины появления дефектов и повреждений<br>  в конструкциях</span><br></div>
+          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Сформируем техзадание на проектирование мероприятий<br>  по восстановлению, усилению или ремонту конструкций,<br>  оборудования и сетей</span></div>
+        </div>
+      </div>
+      <img src='images/connect.jpg' id='connect'>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
