--- a/index.html
+++ b/index.html
@@ -198,12 +198,38 @@
         <div id='center'>
           <div id='step3'>шаг №3. </div><p id='s3_second'>Обработка полученных данных</p>
           <p id='s3_trird'>Детальный отчет с результатами обследования <br>Вы получите через 7 дней. И на его основании сможете<br> определить судьбу объекта и прогнозировать затраты</p>
-          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Мы оценим техническое состояние объекта и присвоим ему<br> категорию </span></div>
-          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Объясним причины появления дефектов и повреждений<br>  в конструкциях</span><br></div>
-          <div id='op'><img src='images/icon.jpg' id='icon'><span id='opis'>Сформируем техзадание на проектирование мероприятий<br>  по восстановлению, усилению или ремонту конструкций,<br>  оборудования и сетей</span></div>
+          <div id='op'><img src='images/icon.jpg' id='icon2'><p id='opis'>Мы оценим техническое состояние объекта и присвоим ему<br> категорию </p></div>
+          <div id='op'><img src='images/icon.jpg' id='icon2'><p id='opis'>Объясним причины появления дефектов и повреждений<br>  в конструкциях</p><br></div>
+          <div id='op'><img src='images/icon.jpg' id='icon2'><p id='opis'>Сформируем техзадание на проектирование мероприятий<br>  по восстановлению, усилению или ремонту конструкций,<br>  оборудования и сетей</p></div>
         </div>
       </div>
       <img src='images/connect.jpg' id='connect'>
+    </div>
+  </div>
+
+  <div class='gift'>
+    <div id='bg_gift'>
+      <div id='get'>
+        <div id='h_gift'>
+          <p id='g_first'>Закажите комплексное обследование и получите тепловизионную съемку в подарок</p>
+          <p id='g_second'>Мы первая в Беларуси компания в составе которой
+            есть аккредитованная тепловизионная лаборатория. <br><br>Наши аттестованные термографисты найдут утечки тепла, определят скрытые дефекты конструкции и подберут систему утепления, которую выдержат стены.</p>
+        </div>
+      </div>
+      <div id='g_but'>
+        <div id='button'><img src='images/download.svg'><span>Получить коммерческое</span></div>
+        <p>Отправьте техзадание и получите коммерческое предложение в течении 15 минут</p>
+      </div>
+      <div id='line9'></div>
+      <div id='line10'></div>
+      <div id='line11'></div>
+      <div id='line12'></div>
+    </div>
+  </div>
+
+  <div class='team'>
+    <div id='t_header'>
+
     </div>
   </div>
   <script src="script.js"></script>
