--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
 
   <div class='team'>
     <div id='t_header'>
-
+      <p>Наша главная ценность - это кадровый состав</p>
+      <p>За каждым отчетом стоят люди, которые берут на себя колоссальную ответственность. Поэтому мы не готовы “просто подписать бумажку”. Наши обследователи - это аттестованные ГИПы (главные инженеры проектов), главные конструктора, инженеры, термографисты и альпинисты, которые подтверждают свою квалификацию на стажировках и курсах по 3-4 раза в году.</p>
     </div>
   </div>
   <script src="script.js"></script>
