--- a/index.html
+++ b/index.html
@@ -228,9 +228,19 @@
   </div>
 
   <div class='team'>
+    <img src='images/tag.svg' id='tag'>
     <div id='t_header'>
-      <p>Наша главная ценность - это кадровый состав</p>
-      <p>За каждым отчетом стоят люди, которые берут на себя колоссальную ответственность. Поэтому мы не готовы “просто подписать бумажку”. Наши обследователи - это аттестованные ГИПы (главные инженеры проектов), главные конструктора, инженеры, термографисты и альпинисты, которые подтверждают свою квалификацию на стажировках и курсах по 3-4 раза в году.</p>
+      <p id='team_first'>Наша главная ценность - это кадровый состав</p>
+      <p id='team_second'>За каждым отчетом стоят люди, которые берут на себя колоссальную ответственность.<br> Поэтому мы не готовы “просто подписать бумажку”. <br><br> Наши обследователи - это аттестованные ГИПы (главные инженеры проектов),<br>  главные конструктора, инженеры, термографисты и альпинисты, которые<br>  подтверждают свою квалификацию на стажировках и курсах по 3-4 раза в году.</p>
+    </div>
+    <div id='docs'>
+      <img src='images/back.svg' id='arrow1'>
+      <div id='doc1'><img src='images/first.jpg'></div>
+      <div id='doc1'><img src='images/second.jpg'></div>
+      <div id='doc1'><img src='images/third.jpg'></div>
+      <div id='doc1'><img src='images/fourth.jpg'></div>
+      <div id='doc1'><img src='images/fifth.jpg'></div>
+      <img src='images/next.svg' id='arrow2'>
     </div>
   </div>
   <script src="script.js"></script>
