--- a/index.html
+++ b/index.html
@@ -234,13 +234,23 @@
       <p id='team_second'>За каждым отчетом стоят люди, которые берут на себя колоссальную ответственность.<br> Поэтому мы не готовы “просто подписать бумажку”. <br><br> Наши обследователи - это аттестованные ГИПы (главные инженеры проектов),<br>  главные конструктора, инженеры, термографисты и альпинисты, которые<br>  подтверждают свою квалификацию на стажировках и курсах по 3-4 раза в году.</p>
     </div>
     <div id='docs'>
-      <img src='images/back.svg' id='arrow1'>
+      <div id='arrow1'><img src='images/arrow_left.svg'></div>
       <div id='doc1'><img src='images/first.jpg'></div>
       <div id='doc1'><img src='images/second.jpg'></div>
       <div id='doc1'><img src='images/third.jpg'></div>
       <div id='doc1'><img src='images/fourth.jpg'></div>
       <div id='doc1'><img src='images/fifth.jpg'></div>
-      <img src='images/next.svg' id='arrow2'>
+      <div id='arrow2'><img src='images/arrow_right.svg'></div>
+    </div>
+  </div>
+
+  <div class='quote_div'>
+    <img src='images/island.jpg' id='island'>
+    <div id='quote_first'>
+      <p id='quote1'>Цена железная</p>
+      <p id='quote2'>больше не возьмем ни копейки</p>
+      <p id='quote3'>“Большинство предпринимателей работают по принципу “назову смешную цену и невыполнимые сроки, а потом им будет некуда деваться”. <br><br>Мы работаем иначе - сразу называем справедливую цену и реальные даты. И мы гарантируем, что ни цена, ни сроки не вырастут в процессе.<br><br>С нами Вы получаете прогнозируемый результат: если мы говорим “сделаем за 10 дней”, значит уложимся в 10 дней и ни минутой позже.”</p>
+      <img src='images/icon.svg'> <span>видеообращение</span> <span>Юрий Крупенько, Руководитель</span>
     </div>
   </div>
   <script src="script.js"></script>
