--- a/index.html
+++ b/index.html
@@ -250,8 +250,11 @@
       <p id='quote1'>Цена железная</p>
       <p id='quote2'>больше не возьмем ни копейки</p>
       <p id='quote3'>“Большинство предпринимателей работают по принципу “назову смешную цену и невыполнимые сроки, а потом им будет некуда деваться”. <br><br>Мы работаем иначе - сразу называем справедливую цену и реальные даты. И мы гарантируем, что ни цена, ни сроки не вырастут в процессе.<br><br>С нами Вы получаете прогнозируемый результат: если мы говорим “сделаем за 10 дней”, значит уложимся в 10 дней и ни минутой позже.”</p>
-      <img src='images/icon.svg'> <span>видеообращение</span> <span>Юрий Крупенько, Руководитель</span>
+      <img src='images/icon.svg'> <span id='span_quote1'>видеообращение</span> <span id='span_quote2'>Юрий Крупенько,</span> <span id='span_quote3'>Руководитель</span>
     </div>
+  </div>
+
+  <div class='reviews'>
   </div>
   <script src="script.js"></script>
 </body>
